--- a/nginx-dpl.yaml
+++ b/nginx-dpl.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-dpl
+  namespace: argocd
 spec:
   selector:
     matchLabels:
@@ -25,6 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-svc
+  namespace: argocd
 spec:
   selector:
     app: nginx-dpl
